--- a/index8.html
+++ b/index8.html
@@ -48,7 +48,7 @@
                       <img src="img/pd-removebg-preview.png" alt="">
                     </div>
                     <div class="componet-text">
-                        <p>Spiritual Podcasts</p>
+                        <p>Spiritua Podcasts</p>
                     </div>
      
                 </div>
