fix: correct typos in index.html and index8.html

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </div>
         <audio id="hoverSound4" src="img/Ghanti.mp3"></audio>
         <div class="content">
-          <h3>Pooja Items</h3>
+          <h3>Pooja Item</h3>
           <p>Buy authentic and hand picked pooja items online
             </p>
         </div>
