--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </div>
         <audio id="hoverSound4" src="img/Ghanti.mp3"></audio>
         <div class="content">
-          <h3>Pooja Item</h3>
+          <h3>Pooja Items</h3>
           <p>Buy authentic and hand picked pooja items online
             </p>
         </div>
@@ -97,75 +97,76 @@
 </section>
 
 <!-- <div class="footer-bg"> -->
-<section class="footer">
-  <div class="container">
-    <div class="card">
-       <div class="footer1-div">
-        <h5 class="text-16 fw-500 mb-30">Our Address</h5>
-        <p style="color:#fff ;     line-height: 38px;">  33Crores Pooja Products Pvt Ltd ,<br> 403, 4th Floor, O-Hub<br>
-          IDCO Sez Infocity,<br>
-          Bhubaneswar 751024,<br>
-          Odisha , Bharat<br>
-          <br></p>
-       </div>
-    </div>
-    <div class="card">
-      <div class="footer2-div">
-        <h5 class="text-16 fw-500 mb-30">Company</h5>
-        <div class="d-flex y-gap-10 flex-column">
-          <a href="https://pandit.33crores.com/about-us">About Us</a>
-          <a href="https://pandit.33crores.com/our-story">Our Story</a>
-          <a href="https://pandit.33crores.com/crores">What is 33 Crores</a>
-          <a href="https://pandit.33crores.com/contact-us">Contact</a>
-          
+  <section class="footer" style="background-color:#111; color:#fff; padding:40px 0;">
+    <div class="container">
+      <div class="row">
+  
+        <!-- Our Address -->
+        <div class="col-lg-3 col-md-6 mb-4">
+          <h5 class="text-16 fw-500 mb-3">Our Address</h5>
+          <p style="line-height: 28px; margin: 0;">
+            33Crores Pooja Products Pvt Ltd,<br>
+            403, 4th Floor, O-Hub<br>
+            IDCO Sez Infocity,<br>
+            Bhubaneswar 751024,<br>
+            Odisha, Bharat
+          </p>
         </div>
-      </div>  
-    </div>
-    <div class="card">
-      <div class="footer3-div">
-        <h5 class="text-16 fw-500 mb-30">Shopping</h5>
-        <div class="d-flex y-gap-10 flex-column">
-          <a href="https://pandit.33crores.com/privacy-data">Privacy & Data</a>
-          <a href="https://pandit.33crores.com/term-condition">Terms & Conditions</a>
-          <a href="https://pandit.33crores.com/cancel-return">Cancellation & Returns</a>
-          <a href="https://pandit.33crores.com/business-enrolledment">Business Enrollment</a>
-          <a href="https://pandit.33crores.com/religious-service-provider">Religious Service Provider</a>
+  
+        <!-- Company -->
+        <div class="col-lg-3 col-md-6 mb-4">
+          <h5 class="text-16 fw-500 mb-3">Company</h5>
+          <ul class="list-unstyled" style="margin: 0; padding: 0;">
+            <li><a href="https://pandit.33crores.com/about-us" style="color:#fff; text-decoration:none;">About Us</a></li>
+            <li><a href="https://pandit.33crores.com/our-story" style="color:#fff; text-decoration:none;">Our Story</a></li>
+            <li><a href="https://pandit.33crores.com/crores" style="color:#fff; text-decoration:none;">What is 33 Crores</a></li>
+            <li><a href="https://pandit.33crores.com/contact-us" style="color:#fff; text-decoration:none;">Contact</a></li>
+          </ul>
         </div>
+  
+        <!-- Shopping -->
+        <div class="col-lg-3 col-md-6 mb-4">
+          <h5 class="text-16 fw-500 mb-3">Shopping</h5>
+          <ul class="list-unstyled" style="margin: 0; padding: 0;">
+            <li><a href="https://pandit.33crores.com/privacy-data" style="color:#fff; text-decoration:none;">Privacy & Data</a></li>
+            <li><a href="https://pandit.33crores.com/term-condition" style="color:#fff; text-decoration:none;">Terms & Conditions</a></li>
+            <li><a href="https://pandit.33crores.com/cancel-return" style="color:#fff; text-decoration:none;">Cancellation & Returns</a></li>
+            <li><a href="https://pandit.33crores.com/business-enrolledment" style="color:#fff; text-decoration:none;">Business Enrollment</a></li>
+            <li><a href="https://pandit.33crores.com/religious-service-provider" style="color:#fff; text-decoration:none;">Religious Service Provider</a></li>
+          </ul>
+        </div>
+  
+        <!-- Follow Us & Apps -->
+        <div class="col-lg-3 col-md-6">
+          <h5 class="text-16 fw-500 mb-3">Follow Us</h5>
+          <div class="d-flex gap-3 mb-3">
+            <a href="https://www.facebook.com/33crores" style="color:#fff;"><i class="fa fa-facebook-square text-24"></i></a>
+            <a href="https://www.youtube.com/@33_Crores" style="color:#fff;"><i class="fa fa-youtube-square text-24"></i></a>
+            <a href="https://www.instagram.com/33crores/" style="color:#fff;"><i class="fa fa-instagram text-24"></i></a>
+          </div>
+  
+          <h5 class="text-16 fw-500 mb-3">Download Our App</h5>
+          <div class="d-flex flex-column gap-2">
+            <a href="https://apps.apple.com/in/app/33-crores/id6443912970"
+               target="_blank" 
+               style="display: flex; align-items: center; padding:10px; background-color:#222; color:#fff; text-decoration:none; border-radius:6px;">
+                <i class="fa fa-apple text-20"></i>
+                <span style="margin-left:10px;">Apple Store</span>
+            </a>
+  
+            <a href="https://play.google.com/store/apps/details?id=com.thirtythreecroresapp&hl=en"
+               target="_blank"
+               style="display: flex; align-items: center; padding:10px; background-color:#222; color:#fff; text-decoration:none; border-radius:6px;">
+                <i class="fa fa-android text-20"></i>
+                <span style="margin-left:10px;">Google Play</span>
+            </a>
+          </div>
+        </div>
+  
       </div>
     </div>
-    <div class="col-xl-2 col-lg-4 col-sm-6">
-      <h5 class="text-16 fw-500 mb-30">Follow Us</h5>
+  </section>
   
-      <!-- Social Icons - horizontally aligned -->
-      <div class="d-flex x-gap-20 mb-20">
-          <a href="https://www.facebook.com/33crores"><i class="icon-facebook text-20"></i></a>
-          <a href="https://www.youtube.com/@33_Crores"><i class="fa fa-youtube-square text-20" aria-hidden="true"></i></a>
-          <a href="https://www.instagram.com/33crores/"><i class="icon-instagram text-20"></i></a>
-      </div>
-  
-      <!-- App Download Buttons - vertically stacked with spacing -->
-      <div class="d-flex flex-column gap-10">
-          <a href="https://apps.apple.com/in/app/33-crores/id6443912970"
-             target="_blank" 
-             class="d-flex items-center px-20 py-10 rounded-8 border-white-15 text-white bg-dark-3">
-              <div class="icon-apple text-24"></div>
-              <div class="ml-15">
-                  <div class="text-15 lh-1 fw-500">Apple Store</div>
-              </div>
-          </a>
-  
-          <a href="https://play.google.com/store/apps/details?id=com.thirtythreecroresapp&hl=en"
-             target="_blank"
-             class="d-flex items-center px-20 py-10 rounded-8 border-white-15 text-white bg-dark-3">
-              <div class="icon-play-market text-24"></div>
-              <div class="ml-15">
-                  <div class="text-15 lh-1 fw-500">Google Play</div>
-              </div>
-          </a>
-      </div>
-  </div>
-  </div>
-</section>
 <!-- </div> -->
 
 <script>
@@ -189,8 +190,6 @@ document.addEventListener('DOMContentLoaded', () => {
         });
     });
 });
-
-
 
 </script>
 <script src="https://www.googletagmanager.com/gtag/js?id=G-7HJVJ0D57F" async></script>
