fix: update social icons layout and improve styling

--- a/index.html
+++ b/index.html
@@ -136,13 +136,12 @@
     <div class="col-xl-2 col-lg-4 col-sm-6">
       <h5 class="text-16 fw-500 mb-30">Follow Us</h5>
   
-      <!-- Social Icons - horizontally aligned -->
-      <div class="d-flex x-gap-20 mb-20">
-          <a href="https://www.facebook.com/33crores"><i class="icon-facebook text-20"></i></a>
-          <a href="https://www.youtube.com/@33_Crores"><i class="fa fa-youtube-square text-20" aria-hidden="true"></i></a>
-          <a href="https://www.instagram.com/33crores/"><i class="icon-instagram text-20"></i></a>
+      <div class="d-flex gap-3 mb-3">
+        <a href="https://www.facebook.com/33crores" style="color:#fff;"><i class="fa fa-facebook-square text-24"></i></a>
+        <a href="https://www.youtube.com/@33_Crores" style="color:#fff;"><i class="fa fa-youtube-square text-24"></i></a>
+        <a href="https://www.instagram.com/33crores/" style="color:#fff;"><i class="fa fa-instagram text-24"></i></a>
       </div>
-  
+
       <!-- App Download Buttons - vertically stacked with spacing -->
       <div class="d-flex flex-column gap-10">
           <a href="https://apps.apple.com/in/app/33-crores/id6443912970"
