--- a/index.html
+++ b/index.html
@@ -441,11 +441,11 @@
         <div class="footer-badges">
           <a class="app-badge" href="https://apps.apple.com/in/app/33-crores/id6443912970" target="_blank"
             rel="noopener noreferrer" aria-label="Download on the App Store">
-            <img src="ios.png" alt="Download on the App Store" loading="lazy" />
+            <img src="img/ios.png" alt="Download on the App Store" loading="lazy" />
           </a>
           <a class="app-badge" href="https://play.google.com/store/apps/details?id=com.thirtythreecroresapp&hl=en"
             target="_blank" rel="noopener noreferrer" aria-label="Get it on Google Play">
-            <img src="google.png" alt="Get it on Google Play" loading="lazy" />
+            <img src="img/google.png" alt="Get it on Google Play" loading="lazy" />
           </a>
         </div>
       </div>
