--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
       </div>
 
       <div>
-        <h5>Follow Us</h5>
+        <h5>Follows</h5>
         <div class="social">
           <a href="https://www.facebook.com/33crores" target="_blank" rel="noopener noreferrer" aria-label="Facebook"><i
               class="fa fa-facebook-square"></i></a>
