--- a/index.html
+++ b/index.html
@@ -355,7 +355,6 @@
     </div>
     <div class="wrap hero">
       <h1>Fresh Pooja Flowers, delivered daily</h1>
-      <p>Experience devotion the simple way. Order flowers, manage pujas, and track deliveries in the 33 Crores app.</p>
     </div>
   </header>
 
@@ -377,7 +376,7 @@
           </div>
           <div class="content">
             <h3>Pooja Flower</h3>
-            <p>Do pooja with fresh flowers delivered to you every day.</p>
+            <p>Experience devotion the simple way. Order flowers, manage pujas, and track deliveries in the 33 Crores app..</p>
           </div>
         </a>
       </article>
@@ -385,7 +384,6 @@
       <!-- Right: App download panel (sidebar) -->
       <aside class="card app-panel" aria-labelledby="get-the-app">
         <h4 id="get-the-app">Get the 33 Crores App</h4>
-        <p>Order faster, get reminders, and manage deliveries on iOS & Android.</p>
         <div class="badge-row">
           <a class="app-badge" href="https://apps.apple.com/in/app/33-crores/id6443912970" target="_blank"
             rel="noopener noreferrer" aria-label="Download on the App Store">
