--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
       <img src="img/Logo_Black.webp" alt="33Crores logo" class="logo" loading="eager" height="52" />
     </div>
     <div class="wrap hero">
-      <h1>Fresh Pooja Flowers, delivered daily</h1>
+      <h1>Pooja Flowers, delivered daily</h1>
     </div>
   </header>
 
