--- a/index.html
+++ b/index.html
@@ -411,8 +411,8 @@
             </div>
           </div>
           <div class="content">
-            <h3>Pooja Flower</h3>
-            <p>Experience devotion the simple way. Order flowers, manage pujas, and track deliveries in the 33 Crores
+            <h3>Subscribe Daily Pooja Flower</h3>
+            <p>Order flowers, manage subscription, and track deliveries in the 33 Crores
               app.</p>
           </div>
         </a>
