--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
           <div class="content">
             <h3>Subscribe Daily Pooja Flower</h3>
             <p>Order flowers, manage subscription, and track deliveries in the 33 Crores
-              app.</p>
+              app. Order faster, get reminders, and manage deliveries on iOS & Android</p>
           </div>
         </a>
       </article>
@@ -421,7 +421,6 @@
       <!-- Right: App download panel -->
       <aside class="card app-panel" aria-labelledby="get-the-app">
         <h4 id="get-the-app">Get the 33 Crores App</h4>
-        <p>Order faster, get reminders, and manage deliveries on iOS & Android.</p>
         <div class="badge-row">
           <a class="app-badge" href="https://apps.apple.com/in/app/33-crores/id6443912970" target="_blank"
             rel="noopener noreferrer" aria-label="Download on the App Store">
