--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
       <img src="img/Logo_Black.webp" alt="33Crores logo" class="logo" loading="eager" height="52" />
     </div>
     <div class="wrap hero">
-      <h1>Pooja Flowers, delivered daily</h1>
+      <h1>Pooja Flowers, Delivered Daily</h1>
     </div>
   </header>
 
@@ -398,7 +398,7 @@
     <div class="wrap grid">
       <!-- Left: Flower card (smaller height & compact content) -->
       <article class="card">
-        <a href="https://flowers.33crores.com/" target="_blank" rel="noopener noreferrer" class="card-link"
+        <a href="#" rel="noopener noreferrer" class="card-link"
           id="hoverCard2">
           <div class="card-inner" aria-hidden="true">
             <div class="imgBox">
@@ -412,8 +412,8 @@
           </div>
           <div class="content">
             <h3>Subscribe Daily Pooja Flower</h3>
-            <p>Order flowers, manage subscription, and track deliveries in the 33 Crores
-              app. Order faster, get reminders, and manage deliveries on iOS & Android</p>
+            <p>Order flowers, manage subscription, get reminders and track deliveries in the 33 Crores
+              app</p>
           </div>
         </a>
       </article>
